fix another mobile layout bug

--- a/index.css
+++ b/index.css
@@ -18,7 +18,6 @@
     }
 
     aside {
-        padding: 9px;
         font-size: 0.9em;
     }
 }
